[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/judges-table.png" type="Texture" id=1]
[ext_resource path="res://objects/JudgesTable.gd" type="Script" id=2]
[ext_resource path="res://characters/Judge.tscn" type="PackedScene" id=3]

[node name="JudgesTable" type="Node2D"]
script = ExtResource( 2 )

[node name="Judge1" parent="." instance=ExtResource( 3 )]
position = Vector2( -23, -3 )

[node name="Judge2" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -3 )

[node name="Judge3" parent="." instance=ExtResource( 3 )]
position = Vector2( 23, -3 )

[node name="Table" type="Sprite" parent="."]
texture = ExtResource( 1 )
